# XXXVVI

./: assistant_command  loom 
loom/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  loom.toml.example  pyproject.toml
loom/src/loom/: __init__.py  cli.py  config.py
loom/src/loom/agent/: __init__.py  loop.py
loom/src/loom/index/: __init__.py  store.py  tree_sitter.py
loom/src/loom/tools/: __init__.py  git.py  shell.py  test.py
